    from input streams.

* docutils/nodes.py:

  - ``image`` element class changed to subclass of Element, not
    TextElement (it's an empty element, and cannot contain text).
  - Added ``attr_defaults`` dictionary for default attribute values.
  - Added empty list as default value for the following attributes:
    ``ids``, ``names``, ``dupnames``, ``classes``, and ``backrefs``.

* docutils/languages/nl.py: Added to project; Dutch mappings by
  Martijn Pieters.

* docutils/parsers/rst/__init__.py:

  - Added settings: ``file_insertion_enabled`` & ``raw_enabled``.

* docutils/parsers/rst/states.py:

  - Added check for escaped at-mark to prevent email address recognition.
  - Fixed option lists to allow spaces inside ``<angle-bracketed option
    arguments>``.
  - Allowed whitespace in paths and URLs.
  - Added auto-enumerated list items.
  - Fixed bug that assumed ``.. _`` and ``.. |`` were invariably
    followed by text.

* docutils/parsers/rst/directives/__init__.py:

  - Allowed whitespace in paths (``path`` function).
  - Added ``uri`` directive option conversion function.

* docutils/parsers/rst/directives/images.py:

  - Allowed whitespace (stripped) in "image" & "figure" directive URLs.
  - Added support for the ``file_insertion_enabled`` setting in the
    "figure" directive (disables "figwidth" option).

* docutils/parsers/rst/directives/misc.py:

  - Fixed "include" and "raw" directives to catch text decoding
    errors.
  - Allowed whitespace in "include" & "raw" directive paths.
  - Added support for ``file_insertion_enabled`` & ``raw_enabled``
    settings in "include" & "raw" directives.

* docutils/parsers/rst/directives/tables.py:

  - Added "list-table" directive.
  - Caught empty CSV table bug.
  - Added support for the ``file_insertion_enabled`` setting in the
    "csv-table" directive.

* docutils/parsers/rst/languages/nl.py: Added to project; Dutch
  mappings by Martijn Pieters.

* docutils/transforms/references.py:
